# aho-corasick-node-rs

./: LICENSE  README.md  package.json
.circleci/: config.yml
lib/: index.test.js
native/: Cargo.toml
native/src/: lib.rs
